--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Page title</title>
+    <title>Download Number To Text Converter apk</title>
     <style>
         
         button
@@ -67,7 +67,7 @@
        position: absolute;
        font-size:60px;
            color:white;
-           left:130px;
+           left:120px;
            top:50px;
            
        }
